--- a/src/main/resources/assets/wurst/lang/en_us.json
+++ b/src/main/resources/assets/wurst/lang/en_us.json
@@ -124,6 +124,7 @@
   "description.wurst.hack.sneak": "Makes you sneak automatically.",
   "description.wurst.hack.snowshoe": "Allows you to walk on powder snow.",
   "description.wurst.hack.speedhack": "Allows you to run ~2.5x faster than you would by sprinting and jumping.\n\n§6§lWARNING:§r Patched in NoCheat+ version 3.13.2. Will only bypass older versions of NoCheat+.\nType §l/ncp version§r to check a server's NoCheat+ version.",
+  "description.wurst.hack.packetmine": "Allows you to break blocks faster but\nuses packets to mine blocks.\nProbably not anti-cheat safe.",
   "description.wurst.hack.speednuker": "Faster version of Nuker that cannot bypass NoCheat+.",
   "description.wurst.hack.spider": "Allows you to climb up walls like a spider.",
   "description.wurst.hack.step": "Allows you to step up full blocks.",
